# django-content-studio

./: .gitignore  pyproject.toml
content_studio/: __init__.py  admin.py  extensions.py  filters.py  form.py  formats.py  settings.py  views.py  viewsets.py  widgets.py
content_studio/contrib/password_reset/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
content_studio/contrib/password_reset/migrations/: 0001_initial.py
content_studio/dashboard/: content_list.py  scheduled_tasks.py
content_studio/locale/nl/LC_MESSAGES/: django.mo  django.po
content_studio/login_backends/: username_password.py
content_studio/media_library/: serializers.py  viewsets.py
content_studio/templates/content_studio/: index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/locales/en/: translation.json
frontend/public/locales/nl/: translation.json
frontend/src/: app.tsx  i18n.ts  index.css  main.tsx  tenant.tsx  types.ts
frontend/src/components/: loading-bar.tsx  tenant-info.tsx
frontend/src/components/content-editor/: aside.tsx  editor.tsx  form-field.tsx  form-set.tsx  header.tsx  index.tsx  inline.tsx  main.tsx
frontend/src/components/filters/: multi-select-filter.tsx  renderer.tsx
frontend/src/components/form-components/: link-button.tsx
frontend/src/components/formats/: choice-format.tsx  date-format.tsx  foreign-key-format.tsx  renderer.tsx  (+2 more)
frontend/src/hooks/: use-discover.ts  use-http.ts  use-list-folder.ts  use-list-media.ts  use-update-folder.ts
frontend/src/lib/: utils.ts
(+72 files in other folders)
